# parlorbox-bookings

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  babel.config.js  deploy.sh  docker-compose.yml  package.json  pre-commit-config.yml  pyproject.toml  setup.cfg  tsconfig.json
.github/workflows/: test-build-deploy.yml  test-build-python.yml
dataservices/: config.py  constants.py
dataservices/post_confirmation_trigger/: controller.py  main.py  mock_event.py  payload.json  service.py
dataservices/vendors/: client.py  cognitoidp.py  dynamodb.py
function/: app.py  config.py  constants.py  controller.py  event.py  main.py  mock_event.py  queries.py  service.py
function/data_sources/: __init__.py  dynamodb.py
function/data_sources/merchant/: merchant.py  table_schema.py
function/schemas/: __init__.py  common.py  customer.py  merchant.py
function/services/: __init__.py  bookings_service.py
infrastructure/: .terraform.lock.hcl  terragrunt.hcl  variables.tf  versions.tf
infrastructure/modules/aws_apigateway/apigatewayv2/: main.tf  variables.tf
infrastructure/modules/aws_apigateway/http_api/: main.tf  outputs.tf  variables.tf
infrastructure/modules/aws_dynamodb/dynamodb_table/: main.tf
infrastructure/modules/aws_event_bridge/: main.tf  outputs.tf  variables.tf
infrastructure/modules/aws_kinesis_firehose/: main.tf  outputs.tf  variables.tf
infrastructure/sandbox/: account.hcl
scripts/: utils.py
scripts/infrastructure/: build.py  client.py  destroy.py  function.py  localstack_config
src/: event.json  index.ts  queries.ts
tests/: test_handler.py  utils.py
tests/mocks/: errors_processing_failed.json  event_bridge_booking.json  kinesis_delivery_stream_event.json  s3_event.json
tests/test_data_sources/: test_merchants.py
vendors/: __init__.py  client.py  dynamodb.py
(+34 files in other folders)
