[tool.poetry]
name = "function"
version = "0.1.0"
description = ""
authors = ["Sean Baier <sean.t.baier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.7"
loguru = "^0.5.3"
python-dotenv = "^0.19.1"
pydantic = {extras = ["email"], version = "^1.9.0"}
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | infrastructure
  | docker)/'''

[tool.poetry.scripts]
invoke = "scripts.utils:invoke"
deploy = "scripts.utils:deploy_bookings"
"run:bookings" = "scripts.utils:run_bookings"
"clean:terragrunt" = "scripts.utils:clean_terragrunt"